Fix production build not showing images

--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,11 @@
 }
 
 @layer base {
+  body {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
   button {
     border-radius: 5px;
     margin: 2px 0px;
